tests/kulezi_tests/bad/unknown_variable_type01.lat
int main() {
    unknownType x;
    return 0;
}